# devmind-backend

./: .env.example  .gitignore  README.md  config.py  error.py  logger.py  main.py  pyproject.toml
database/: query.sql
middleware/: request_logging.py
models/: auth.py
routers/: auth.py
schema/: response.py  schemas.py
services/: database.py  email_service.py
